2006-03-14  Adam Jocksch  <ajocksch@redhat.com>

	* InlineBuffer.java (createTags): Now goes through list of comments
	and creates tags for them as well.
	* SourceBuffer.java (createTags): Ditto.
	(addComment): Now adds a comment into the protected static HashMap,
	since we want to keep a copy but don't want to burden the DOM.
	(init): Comment tag now initialized again, and listener is added.
	(CommentList): Added, data structure to keep track of comments for a file.
	* StackLevel.java (isParsed): Now passes call on to DOMSource.
	(setParsed): Ditto.
	* cparser/CDTParser.java (parse): Now does secondary scan of file 
	to pick up comments, code copied from SimpleParser.java.
	* cparser/SimpleParser.java (Tokenizer): Refactored out into it's own class.
	(Token): Ditto.
	* cparser/Token.java: Added.
	* cparser/Tokenizer.java: Added.
	* prefs/SyntaxPreferenceGroup.java: Added field for Comments.

2006-03-13  Adam Jocksch  <ajocksch@redhat.com>

	* SourceBuffer.java (init): Updated loading of preferences to 
	reflect making Syntax Highlighting related preferences a
	subgroup.
	* SourceView.java (initialize): Ditto.
	* prefs/SourceWinPreferenceGroup (SourceWinPreferenceGroup):
	Now takes int for preference tab.
	* prefs/SyntaxPreferenceGroup (SyntaxPreferenceGroup): Ditto.

2006-03-09  Adam Jocksch  <ajocksch@redhat.com>

	* InlineBuffer.java (getVariable): Now adds check for the DOMLine
	being null since this occurs in corner cases.

	* SourceWindowFactory.java (createSourceWindow): Removed debugging
	output.

2006-03-08  Adam Jocksch  <ajocksch@redhat.com>
	
	* SourceWindow.java (createToolbar): Fixed tooltip for continue execution.
	(SourceWindowListener::comboEvent): Changed to reflect changes in mode
	selection box.

2006-03-03  Adam Jocksch  <ajocksch@redhat.com>

	* InlineSourceView.java (refresh): Renamed to recalculateVisibleScopes.
	* MixedView.java (refresh): Removed.
	* SourceView.java (refresh): Removed.